--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "express": "^4.16.4",
     "sequelize": "^5.2.8",
     "sqlite3": "^4.0.6"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "frisby": "^2.1.1",
+    "jest": "^24.7.1"
   }
 }
