--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "forever start app.js; ./node_modules/jest/bin/jest.js; forever stop app.js;"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
