--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
 node_js: "10"
 install: npm install
-# before_script: npm i -g forever
+before_script: npm i -g forever
 script: npm test
